# jamesnguyen46.github.io

./: .pre-commit-config.yaml  Makefile  README.md  index.html  manage.py  pyproject.toml  requirements.txt
.github/workflows/: django.yml  generate_static_web.yml  pre_commit.yml
django_web_app/: settings.py  urls.py  wsgi.py
docs/: CNAME  index.html
docs/static/js/: main.js
profile/: urls.py  views.py
profile/static/css/: style.css
profile/static/js/: main.js
profile/templates/: about.html  base.html  experience.html  footer.html  header.html  hero.html  index.html  resources.html  scripts.html  skills.html  testimonials.html
profile/templatetags/: tag_utils.py
profile_project/: settings.py  urls.py  wsgi.py
resume/: firebase.py  urls.py  views.py
resume/templates/: index.html
static/css/: style.css
