[tool.poetry]
name = "jamesnguyen46"
version = "0.1.0"
description = "James's personal profile page"
authors = ["jamesnguyen46 <thachnguyen1989@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "4.0.4"
django-distill = "2.9.2"
Pyrebase4 = "^4.5.0"

[tool.poetry.dev-dependencies]
pre-commit = "2.19.0"
pylint = "2.13.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
